syntax = "proto3";

package dlkit.proto.resource;

import "dlkit/primordium/id/primitives.proto";
import "osid/objects.proto";

message Resource {
  dlkit.primordium.id.primitives.Id avatar = 1;
  dlkit.proto.osid.OsidCatalog bin = 2;
  bool group = 3;
}

message ResourceQuery {

}

message ResourceForm {

}

message ResourceSearch {

}

message ResourceSearchResults {

}

message ResourceList {
  repeated Resource = 1;
}

message ResourceNode {

}

message ResourceNodeList {
  repeated ResourceNode = 1;
}

message ResourceRelationship {
  dlkit.proto.osid.OsidCatalog bin = 1;
  dlkit.primordium.id.primitives.Id destination_resource = 2;
  dlkit.primordium.id.primitives.Id source_resource = 3;
}

message ResourceRelationshipQuery {

}

message ResourceRelationshipForm {

}

message ResourceRelationshipSearch {

}

message ResourceRelationshipSearchResults {

}

message ResourceRelationshipList {
  repeated ResourceRelationship = 1;
}

message Bin {

}

message BinQuery {

}

message BinForm {

}

message BinSearch {

}

message BinSearchResults {

}

message BinList {
  repeated Bin = 1;
}

message BinNode {

}

message BinNodeList {
  repeated BinNode = 1;
}

service ResourceLookupSession {
  rpc GetBinId() returns (Id) {}
  rpc GetBin() returns (Bin) {}
  rpc CanLookupResources() returns (boolean) {}
  rpc UseComparativeResourceView() returns () {}
  rpc UsePlenaryResourceView() returns () {}
  rpc UseFederatedBinView() returns () {}
  rpc UseIsolatedBinView() returns () {}
  rpc GetResource(dlkit.primordium.id.primitives.Id) returns (Resource) {}
  rpc GetResourcesByIds(dlkit.primordium.id.primitives.IdList) returns (stream Resource) {}
  rpc GetResourcesByGenusType(dlkit.primordium.type.primitives.Type) returns (stream Resource) {}
  rpc GetResourcesByParentGenusType(dlkit.primordium.type.primitives.Type) returns (stream Resource) {}
  rpc GetResourcesByRecordType(dlkit.primordium.type.primitives.Type) returns (stream Resource) {}
  rpc GetResources() returns (stream Resource) {}
}

service ResourceQuerySession {
  rpc GetBinId() returns (Id) {}
  rpc GetBin() returns (Bin) {}
  rpc CanSearchResources() returns (boolean) {}
  rpc UseFederatedBinView() returns () {}
  rpc UseIsolatedBinView() returns () {}
  rpc GetResourceQuery() returns (ResourceQuery) {}
  rpc GetResourcesByQuery(osid.resource.ResourceQuery) returns (stream Resource) {}
}

service ResourceSearchSession {
  rpc GetResourceSearch() returns (ResourceSearch) {}
  rpc GetResourceSearchOrder() returns (ResourceSearchOrder) {}
  rpc GetResourcesBySearch(osid.resource.ResourceQuery, osid.resource.ResourceSearch) returns (ResourceSearchResults) {}
  rpc GetResourceQueryFromInspector(osid.resource.ResourceQueryInspector) returns (ResourceQuery) {}
}

service ResourceAdminSession {
  rpc GetBinId() returns (Id) {}
  rpc GetBin() returns (Bin) {}
  rpc CanCreateResources() returns (boolean) {}
  rpc CanCreateResourceWithRecordTypes(osid.type.Type[]) returns (boolean) {}
  rpc GetResourceFormForCreate(osid.type.Type[]) returns (ResourceForm) {}
  rpc CreateResource(osid.resource.ResourceForm) returns (Resource) {}
  rpc CanUpdateResources() returns (boolean) {}
  rpc GetResourceFormForUpdate(dlkit.primordium.id.primitives.Id) returns (ResourceForm) {}
  rpc UpdateResource(osid.resource.ResourceForm) returns () {}
  rpc CanDeleteResources() returns (boolean) {}
  rpc DeleteResource(dlkit.primordium.id.primitives.Id) returns () {}
  rpc CanManageResourceAliases() returns (boolean) {}
  rpc AliasResource(dlkit.primordium.id.primitives.Id, dlkit.primordium.id.primitives.Id) returns () {}
}

service ResourceNotificationSession {
  rpc GetBinId() returns (Id) {}
  rpc GetBin() returns (Bin) {}
  rpc CanRegisterForResourceNotifications() returns (boolean) {}
  rpc UseFederatedBinView() returns () {}
  rpc UseIsolatedBinView() returns () {}
  rpc RegisterForNewResources() returns () {}
  rpc RegisterForChangedResources() returns () {}
  rpc RegisterForChangedResource(dlkit.primordium.id.primitives.Id) returns () {}
  rpc RegisterForDeletedResources() returns () {}
  rpc RegisterForDeletedResource(dlkit.primordium.id.primitives.Id) returns () {}
  rpc ReliableResourceNotifications() returns () {}
  rpc UnreliableResourceNotifications() returns () {}
  rpc AcknowledgeResourceNotification(dlkit.primordium.id.primitives.Id) returns () {}
}

service ResourceBinSession {
  rpc UseComparativeBinView() returns () {}
  rpc UsePlenaryBinView() returns () {}
  rpc CanLookupResourceBinMappings() returns (boolean) {}
  rpc GetResourceIdsByBin(dlkit.primordium.id.primitives.Id) returns (stream Id) {}
  rpc GetResourcesByBin(dlkit.primordium.id.primitives.Id) returns (stream Resource) {}
  rpc GetResourceIdsByBins(dlkit.primordium.id.primitives.IdList) returns (stream Id) {}
  rpc GetResourcesByBins(dlkit.primordium.id.primitives.IdList) returns (stream Resource) {}
  rpc GetBinIdsByResource(dlkit.primordium.id.primitives.Id) returns (stream Id) {}
  rpc GetBinsByResource(dlkit.primordium.id.primitives.Id) returns (stream Bin) {}
}

service ResourceBinAssignmentSession {
  rpc CanAssignResources() returns (boolean) {}
  rpc CanAssignResourcesToBin(dlkit.primordium.id.primitives.Id) returns (boolean) {}
  rpc GetAssignableBinIds(dlkit.primordium.id.primitives.Id) returns (stream Id) {}
  rpc GetAssignableBinIdsForResource(dlkit.primordium.id.primitives.Id, dlkit.primordium.id.primitives.Id) returns (stream Id) {}
  rpc AssignResourceToBin(dlkit.primordium.id.primitives.Id, dlkit.primordium.id.primitives.Id) returns () {}
  rpc UnassignResourceFromBin(dlkit.primordium.id.primitives.Id, dlkit.primordium.id.primitives.Id) returns () {}
}

service ResourceSmartBinSession {
  rpc GetBinId() returns (Id) {}
  rpc GetBin() returns (Bin) {}
  rpc CanManageSmartBins() returns (boolean) {}
  rpc GetResourceQuery() returns (ResourceQuery) {}
  rpc GetResourceSearchOrder() returns (ResourceSearchOrder) {}
  rpc ApplyResourceQuery(osid.resource.ResourceQuery) returns () {}
  rpc InspectResourceQuery() returns (ResourceQueryInspector) {}
  rpc ApplyResourceSequencing(osid.resource.ResourceSearchOrder) returns () {}
  rpc GetResourceQueryFromInspector(osid.resource.ResourceQueryInspector) returns (ResourceQuery) {}
}

service MembershipSession {
  rpc GetBinId() returns (Id) {}
  rpc GetBin() returns (Bin) {}
  rpc CanQueryMembership() returns (boolean) {}
  rpc UseFederatedBinView() returns () {}
  rpc UseIsolatedBinView() returns () {}
  rpc IsMember(dlkit.primordium.id.primitives.Id, dlkit.primordium.id.primitives.Id) returns (boolean) {}
}

service GroupSession {
  rpc GetBinId() returns (Id) {}
  rpc GetBin() returns (Bin) {}
  rpc CanLookupResourceMembers() returns (boolean) {}
  rpc UseComparativeResourceView() returns () {}
  rpc UsePlenaryResourceView() returns () {}
  rpc UseFederatedBinView() returns () {}
  rpc UseIsolatedBinView() returns () {}
  rpc UseFederatedGroupView() returns () {}
  rpc UseIsolatedGroupView() returns () {}
  rpc GetResourceIdsByGroup(dlkit.primordium.id.primitives.Id) returns (stream Id) {}
  rpc GetResourcesByGroup(dlkit.primordium.id.primitives.Id) returns (stream Resource) {}
  rpc GetResourceIdsByGroups(dlkit.primordium.id.primitives.IdList) returns (stream Id) {}
  rpc GetResourcesByGroups(dlkit.primordium.id.primitives.IdList) returns (stream Resource) {}
  rpc GetGroupIdsByResource(dlkit.primordium.id.primitives.Id) returns (stream Id) {}
  rpc GetGroupsByResource(dlkit.primordium.id.primitives.Id) returns (stream Resource) {}
}

service GroupAssignmentSession {
  rpc GetBinId() returns (Id) {}
  rpc GetBin() returns (Bin) {}
  rpc CanAssignResources() returns (boolean) {}
  rpc CanAssignResourcesToGroup(dlkit.primordium.id.primitives.Id) returns (boolean) {}
  rpc AssignResourceToGroup(dlkit.primordium.id.primitives.Id, dlkit.primordium.id.primitives.Id) returns () {}
  rpc UnassignResourceFromGroup(dlkit.primordium.id.primitives.Id, dlkit.primordium.id.primitives.Id) returns () {}
}

service GroupNotificationSession {
  rpc GetBinId() returns (Id) {}
  rpc GetBin() returns (Bin) {}
  rpc CanRegisterForGroupNotifications() returns (boolean) {}
  rpc UseFederatedBinView() returns () {}
  rpc UseIsolatedBinView() returns () {}
  rpc RegisterForNewMembers(dlkit.primordium.id.primitives.Id) returns () {}
  rpc RegisterForDeletedMembers(dlkit.primordium.id.primitives.Id) returns () {}
  rpc ReliableGroupNotifications() returns () {}
  rpc UnreliableGroupNotifications() returns () {}
  rpc AcknowledgeGroupNotification(dlkit.primordium.id.primitives.Id) returns () {}
}

service GroupHierarchySession {
  rpc GetBinId() returns (Id) {}
  rpc GetBin() returns (Bin) {}
  rpc CanAccessGroupHierarchy() returns (boolean) {}
  rpc UseComparativeResourceView() returns () {}
  rpc UsePlenaryResourceView() returns () {}
  rpc UseFederatedBinView() returns () {}
  rpc UseIsolatedBinView() returns () {}
  rpc IsMemberOfGroup(dlkit.primordium.id.primitives.Id, dlkit.primordium.id.primitives.Id) returns (boolean) {}
  rpc GetResourceNodeIds(dlkit.primordium.id.primitives.Id, sint32, sint32, bool) returns (Node) {}
  rpc GetResourceNodes(dlkit.primordium.id.primitives.Id, sint32, sint32, bool) returns (BillingNode) {}
}

service ResourceAgentSession {
  rpc GetBinId() returns (Id) {}
  rpc GetBin() returns (Bin) {}
  rpc CanLookupResourceAgentMappings() returns (boolean) {}
  rpc UseComparativeAgentView() returns () {}
  rpc UsePlenaryAgentView() returns () {}
  rpc UseFederatedBinView() returns () {}
  rpc UseIsolatedBinView() returns () {}
  rpc GetResourceIdByAgent(dlkit.primordium.id.primitives.Id) returns (Id) {}
  rpc GetResourceByAgent(dlkit.primordium.id.primitives.Id) returns (Resource) {}
  rpc GetAgentIdsByResource(dlkit.primordium.id.primitives.Id) returns (stream Id) {}
  rpc GetAgentsByResource(dlkit.primordium.id.primitives.Id) returns (stream Agent) {}
}

service ResourceAgentAssignmentSession {
  rpc GetBinId() returns (Id) {}
  rpc GetBin() returns (Bin) {}
  rpc CanAssignAgents() returns (boolean) {}
  rpc CanAssignAgentsToResource(dlkit.primordium.id.primitives.Id) returns (boolean) {}
  rpc AssignAgentToResource(dlkit.primordium.id.primitives.Id, dlkit.primordium.id.primitives.Id) returns () {}
  rpc UnassignAgentFromResource(dlkit.primordium.id.primitives.Id, dlkit.primordium.id.primitives.Id) returns () {}
}

service ResourceRelationshipLookupSession {
  rpc GetBinId() returns (Id) {}
  rpc GetBin() returns (Bin) {}
  rpc CanLookupResourceRelationships() returns (boolean) {}
  rpc UseComparativeResourceRelationshipView() returns () {}
  rpc UsePlenaryResourceRelationshipView() returns () {}
  rpc UseFederatedBinView() returns () {}
  rpc UseIsolatedBinView() returns () {}
  rpc UseEffectiveResourceRelationshipView() returns () {}
  rpc UseAnyEffectiveResourceRelationshipView() returns () {}
  rpc GetResourceRelationship(dlkit.primordium.id.primitives.Id) returns (ResourceRelationship) {}
  rpc GetResourceRelationshipsByIds(dlkit.primordium.id.primitives.IdList) returns (stream ResourceRelationship) {}
  rpc GetResourceRelationshipsByGenusType(dlkit.primordium.type.primitives.Type) returns (stream ResourceRelationship) {}
  rpc GetResourceRelationshipsByParentGenusType(dlkit.primordium.type.primitives.Type) returns (stream ResourceRelationship) {}
  rpc GetResourceRelationshipsByRecordType(dlkit.primordium.type.primitives.Type) returns (stream ResourceRelationship) {}
  rpc GetResourceRelationshipsOnDate(google.protobuf.Timestamp, google.protobuf.Timestamp) returns (stream ResourceRelationship) {}
  rpc GetResourceRelationshipsForSourceResource(dlkit.primordium.id.primitives.Id) returns (stream ResourceRelationship) {}
  rpc GetResourceRelationshipsForSourceResourceOnDate(dlkit.primordium.id.primitives.Id, google.protobuf.Timestamp, google.protobuf.Timestamp) returns (stream ResourceRelationship) {}
  rpc GetResourceRelationshipsByGenusTypeForSourceResource(dlkit.primordium.id.primitives.Id, dlkit.primordium.type.primitives.Type) returns (stream ResourceRelationship) {}
  rpc GetResourceRelationshipsByGenusTypeForSourceResourceOnDate(dlkit.primordium.id.primitives.Id, dlkit.primordium.type.primitives.Type, google.protobuf.Timestamp, google.protobuf.Timestamp) returns (stream ResourceRelationship) {}
  rpc GetResourceRelationshipsForDestinationResource(dlkit.primordium.id.primitives.Id) returns (stream ResourceRelationship) {}
  rpc GetResourceRelationshipsForDestinationResourceOnDate(dlkit.primordium.id.primitives.Id, google.protobuf.Timestamp, google.protobuf.Timestamp) returns (stream ResourceRelationship) {}
  rpc GetResourceRelationshipsByGenusTypeForDestinationResource(dlkit.primordium.id.primitives.Id, dlkit.primordium.type.primitives.Type) returns (stream ResourceRelationship) {}
  rpc GetResourceRelationshipsByGenusTypeForDestinationResourceOnDate(dlkit.primordium.id.primitives.Id, dlkit.primordium.type.primitives.Type, google.protobuf.Timestamp, google.protobuf.Timestamp) returns (stream ResourceRelationship) {}
  rpc GetResourceRelationshipsForResources(dlkit.primordium.id.primitives.Id, dlkit.primordium.id.primitives.Id) returns (stream ResourceRelationship) {}
  rpc GetResourceRelationshipsForResourcesOnDate(dlkit.primordium.id.primitives.Id, dlkit.primordium.id.primitives.Id, google.protobuf.Timestamp, google.protobuf.Timestamp) returns (stream ResourceRelationship) {}
  rpc GetResourceRelationshipsByGenusTypeForResources(dlkit.primordium.id.primitives.Id, dlkit.primordium.id.primitives.Id, dlkit.primordium.type.primitives.Type) returns (stream ResourceRelationship) {}
  rpc GetResourceRelationshipsByGenusTypeForResourcesOnDate(dlkit.primordium.id.primitives.Id, dlkit.primordium.id.primitives.Id, dlkit.primordium.type.primitives.Type, google.protobuf.Timestamp, google.protobuf.Timestamp) returns (stream ResourceRelationship) {}
  rpc GetResourceRelationships() returns (stream ResourceRelationship) {}
}

service ResourceRelationshipQuerySession {
  rpc GetBinId() returns (Id) {}
  rpc GetBin() returns (Bin) {}
  rpc CanSearchResourceRelationships() returns (boolean) {}
  rpc UseFederatedBinView() returns () {}
  rpc UseIsolatedBinView() returns () {}
  rpc GetResourceRelationshipQuery() returns (ResourceRelationshipQuery) {}
  rpc GetResourceRelationshipsByQuery(osid.resource.ResourceRelationshipQuery) returns (stream ResourceRelationship) {}
}

service ResourceRelationshipSearchSession {
  rpc GetResourceRelationshipSearch() returns (ResourceRelationshipSearch) {}
  rpc GetResourceRelationshipSearchOrder() returns (ResourceRelationshipSearchOrder) {}
  rpc GetResourceRelationshipsBySearch(osid.resource.ResourceRelationshipQuery, osid.resource.ResourceRelationshipSearch) returns (ResourceRelationshipSearchResults) {}
  rpc GetResourceRelationshipQueryFromInspector(osid.resource.ResourceRelationshipQueryInspector) returns (ResourceRelationshipQuery) {}
}

service ResourceRelationshipAdminSession {
  rpc GetBinId() returns (Id) {}
  rpc GetBin() returns (Bin) {}
  rpc CanCreateResourceRelationships() returns (boolean) {}
  rpc CanCreateResourceRelationshipWithRecordTypes(osid.type.Type[]) returns (boolean) {}
  rpc GetResourceRelationshipFormForCreate(dlkit.primordium.id.primitives.Id, dlkit.primordium.id.primitives.Id, osid.type.Type[]) returns (ResourceRelationshipForm) {}
  rpc CreateResourceRelationship(osid.resource.ResourceRelationshipForm) returns (ResourceRelationship) {}
  rpc CanUpdateResourceRelationships() returns (boolean) {}
  rpc GetResourceRelationshipFormForUpdate(dlkit.primordium.id.primitives.Id) returns (ResourceRelationshipForm) {}
  rpc UpdateResourceRelationship(osid.resource.ResourceRelationshipForm) returns () {}
  rpc CanDeleteResourceRelationships() returns (boolean) {}
  rpc DeleteResourceRelationship(dlkit.primordium.id.primitives.Id) returns () {}
  rpc CanManageResourceRelationshipAliases() returns (boolean) {}
  rpc AliasResourceRelationship(dlkit.primordium.id.primitives.Id, dlkit.primordium.id.primitives.Id) returns () {}
}

service ResourceRelationshipNotificationSession {
  rpc GetBinId() returns (Id) {}
  rpc GetBin() returns (Bin) {}
  rpc CanRegisterForResourceRelationshipNotifications() returns (boolean) {}
  rpc UseFederatedBinView() returns () {}
  rpc UseIsolatedBinView() returns () {}
  rpc RegisterForNewResourceRelationships() returns () {}
  rpc RegisterForNewResourceRelationshipsByGenusType(dlkit.primordium.type.primitives.Type) returns () {}
  rpc RegisterForNewResourceRelationshipsForSourceResource(dlkit.primordium.id.primitives.Id) returns () {}
  rpc RegisterForNewResourceRelationshipsForDestinationResource(dlkit.primordium.id.primitives.Id) returns () {}
  rpc RegisterForChangedResourceRelationships() returns () {}
  rpc RegisterForChangedResourceRelationshipsByGenusType(dlkit.primordium.type.primitives.Type) returns () {}
  rpc RegisterForChangedResourceRelationshipsForSourceResource(dlkit.primordium.id.primitives.Id) returns () {}
  rpc RegisterForChangedResourceRelationshipsForDestinationResource(dlkit.primordium.id.primitives.Id) returns () {}
  rpc RegisterForChangedResourceRelationship(dlkit.primordium.id.primitives.Id) returns () {}
  rpc RegisterForDeletedResourceRelationships() returns () {}
  rpc RegisterForDeletedResourceRelationshipsByGenusType(dlkit.primordium.type.primitives.Type) returns () {}
  rpc RegisterForDeletedResourceRelationshipsForSourceResource(dlkit.primordium.id.primitives.Id) returns () {}
  rpc RegisterForDeletedResourceRelationshipsForDestinationResource(dlkit.primordium.id.primitives.Id) returns () {}
  rpc RegisterForDeletedResourceRelationship(dlkit.primordium.id.primitives.Id) returns () {}
  rpc ReliableResourceRelationshipNotifications() returns () {}
  rpc UnreliableResourceRelationshipNotifications() returns () {}
  rpc AcknowledgeResourceRelationshipNotification(dlkit.primordium.id.primitives.Id) returns () {}
}

service ResourceRelationshipBinSession {
  rpc UseComparativeBinView() returns () {}
  rpc UsePlenaryBinView() returns () {}
  rpc CanLookupResourceRelationshipBinMappings() returns (boolean) {}
  rpc GetResourceRelationshipIdsByBin(dlkit.primordium.id.primitives.Id) returns (stream Id) {}
  rpc GetResourceRelationshipsByBin(dlkit.primordium.id.primitives.Id) returns (stream ResourceRelationship) {}
  rpc GetResourceRelationshipsIdsByBins(dlkit.primordium.id.primitives.IdList) returns (stream Id) {}
  rpc GetResourceRelationshipsByBins(dlkit.primordium.id.primitives.IdList) returns (stream ResourceRelationship) {}
  rpc GetBinIdsByResourceRelationship(dlkit.primordium.id.primitives.Id) returns (stream Id) {}
  rpc GetBinsByResourceRelationship(dlkit.primordium.id.primitives.Id) returns (stream Bin) {}
}

service ResourceRelationshipBinAssignmentSession {
  rpc CanAssignResourceRelationships() returns (boolean) {}
  rpc CanAssignResourceRelationshipsToBin(dlkit.primordium.id.primitives.Id) returns (boolean) {}
  rpc GetAssignableBinIds(dlkit.primordium.id.primitives.Id) returns (stream Id) {}
  rpc GetAssignableBinIdsForResourceRelationship(dlkit.primordium.id.primitives.Id, dlkit.primordium.id.primitives.Id) returns (stream Id) {}
  rpc AssignResourceRelationshipToBin(dlkit.primordium.id.primitives.Id, dlkit.primordium.id.primitives.Id) returns () {}
  rpc UnassignResourceRelationshipFromBin(dlkit.primordium.id.primitives.Id, dlkit.primordium.id.primitives.Id) returns () {}
}

service ResourceRelationshipSmartBinSession {
  rpc GetBinId() returns (Id) {}
  rpc GetBin() returns (Bin) {}
  rpc CanManageSmartBins() returns (boolean) {}
  rpc GetResourceRelationshipQuery() returns (ResourceRelationshipQuery) {}
  rpc GetResourceRelationshipSearchOrder() returns (ResourceRelationshipSearchOrder) {}
  rpc ApplyResourceRelationshipQuery(osid.resource.ResourceRelationshipQuery) returns () {}
  rpc InspectResourceRelationshipQuery() returns (ResourceRelationshipQueryInspector) {}
  rpc ApplyResourceRelationshipSequencing(osid.resource.ResourceRelationshipSearchOrder) returns () {}
  rpc GetResourceRelationshipQueryFromInspector(osid.resource.ResourceRelationshipQueryInspector) returns (ResourceQuery) {}
}

service BinLookupSession {
  rpc CanLookupBins() returns (boolean) {}
  rpc UseComparativeBinView() returns () {}
  rpc UsePlenaryBinView() returns () {}
  rpc GetBin(dlkit.primordium.id.primitives.Id) returns (Bin) {}
  rpc GetBinsByIds(dlkit.primordium.id.primitives.IdList) returns (stream Bin) {}
  rpc GetBinsByGenusType(dlkit.primordium.type.primitives.Type) returns (stream Bin) {}
  rpc GetBinsByParentGenusType(dlkit.primordium.type.primitives.Type) returns (stream Bin) {}
  rpc GetBinsByRecordType(dlkit.primordium.type.primitives.Type) returns (stream Bin) {}
  rpc GetBinsByProvider(dlkit.primordium.id.primitives.Id) returns (stream Bin) {}
  rpc GetBins() returns (stream Bin) {}
}

service BinQuerySession {
  rpc CanSearchBins() returns (boolean) {}
  rpc GetBinQuery() returns (BinQuery) {}
  rpc GetBinsByQuery(osid.resource.BinQuery) returns (stream Bin) {}
}

service BinSearchSession {
  rpc GetBinSearch() returns (BinSearch) {}
  rpc GetBinSearchOrder() returns (BinSearchOrder) {}
  rpc GetBinsBySearch(osid.resource.BinQuery, osid.resource.BinSearch) returns (BinSearchResults) {}
  rpc GetBinQueryFromInspector(osid.resource.BinQueryInspector) returns (BinQuery) {}
}

service BinAdminSession {
  rpc CanCreateBins() returns (boolean) {}
  rpc CanCreateBinWithRecordTypes(osid.type.Type[]) returns (boolean) {}
  rpc GetBinFormForCreate(osid.type.Type[]) returns (BinForm) {}
  rpc CreateBin(osid.resource.BinForm) returns (Bin) {}
  rpc CanUpdateBins() returns (boolean) {}
  rpc GetBinFormForUpdate(dlkit.primordium.id.primitives.Id) returns (BinForm) {}
  rpc UpdateBin(osid.resource.BinForm) returns () {}
  rpc CanDeleteBins() returns (boolean) {}
  rpc DeleteBin(dlkit.primordium.id.primitives.Id) returns () {}
  rpc CanManageBinAliases() returns (boolean) {}
  rpc AliasBin(dlkit.primordium.id.primitives.Id, dlkit.primordium.id.primitives.Id) returns () {}
}

service BinNotificationSession {
  rpc CanRegisterForBinNotifications() returns (boolean) {}
  rpc RegisterForNewBins() returns () {}
  rpc RegisterForNewBinAncestors(dlkit.primordium.id.primitives.Id) returns () {}
  rpc RegisterForNewBinDescendants(dlkit.primordium.id.primitives.Id) returns () {}
  rpc RegisterForChangedBins() returns () {}
  rpc RegisterForChangedBin(dlkit.primordium.id.primitives.Id) returns () {}
  rpc RegisterForDeletedBins() returns () {}
  rpc RegisterForDeletedBin(dlkit.primordium.id.primitives.Id) returns () {}
  rpc RegisterForDeletedBinAncestors(dlkit.primordium.id.primitives.Id) returns () {}
  rpc RegisterForDeletedBinDescendants(dlkit.primordium.id.primitives.Id) returns () {}
  rpc ReliableBinNotifications() returns () {}
  rpc UnreliableBinNotifications() returns () {}
  rpc AcknowledgeBinNotification(dlkit.primordium.id.primitives.Id) returns () {}
}

service BinHierarchySession {
  rpc GetBinHierarchyId() returns (Id) {}
  rpc GetBinHierarchy() returns (Hierarchy) {}
  rpc CanAccessBinHierarchy() returns (boolean) {}
  rpc UseComparativeBinView() returns () {}
  rpc UsePlenaryBinView() returns () {}
  rpc GetRootBinIds() returns (stream Id) {}
  rpc GetRootBins() returns (stream Bin) {}
  rpc HasParentBins(dlkit.primordium.id.primitives.Id) returns (boolean) {}
  rpc IsParentOfBin(dlkit.primordium.id.primitives.Id, dlkit.primordium.id.primitives.Id) returns (boolean) {}
  rpc GetParentBinIds(dlkit.primordium.id.primitives.Id) returns (stream Id) {}
  rpc GetParentBins(dlkit.primordium.id.primitives.Id) returns (stream Bin) {}
  rpc IsAncestorOfBin(dlkit.primordium.id.primitives.Id, dlkit.primordium.id.primitives.Id) returns (boolean) {}
  rpc HasChildBins(dlkit.primordium.id.primitives.Id) returns (boolean) {}
  rpc IsChildOfBin(dlkit.primordium.id.primitives.Id, dlkit.primordium.id.primitives.Id) returns (boolean) {}
  rpc GetChildBinIds(dlkit.primordium.id.primitives.Id) returns (stream Id) {}
  rpc GetChildBins(dlkit.primordium.id.primitives.Id) returns (stream Bin) {}
  rpc IsDescendantOfBin(dlkit.primordium.id.primitives.Id, dlkit.primordium.id.primitives.Id) returns (boolean) {}
  rpc GetBinNodeIds(dlkit.primordium.id.primitives.Id, sint32, sint32, bool) returns (Node) {}
  rpc GetBinNodes(dlkit.primordium.id.primitives.Id, sint32, sint32, bool) returns (BinNode) {}
}

service BinHierarchyDesignSession {
  rpc GetBinHierarchyId() returns (Id) {}
  rpc GetBinHierarchy() returns (Hierarchy) {}
  rpc CanModifyBinHierarchy() returns (boolean) {}
  rpc AddRootBin(dlkit.primordium.id.primitives.Id) returns () {}
  rpc RemoveRootBin(dlkit.primordium.id.primitives.Id) returns () {}
  rpc AddChildBin(dlkit.primordium.id.primitives.Id, dlkit.primordium.id.primitives.Id) returns () {}
  rpc RemoveChildBin(dlkit.primordium.id.primitives.Id, dlkit.primordium.id.primitives.Id) returns () {}
  rpc RemoveChildBins(dlkit.primordium.id.primitives.Id) returns () {}
}