// This file is auto-generated by ``protobuf_builder.py``
// DO NOT EDIT THIS BY HAND!
syntax = "proto3";

package dlkit.proto.rules;

import "dlkit/primordium/id/primitives.proto";
import "dlkit/primordium/locale/primitives.proto";
import "dlkit/primordium/type/primitives.proto";

message Rule {

}

message RuleQuery {

}

message RuleQueryInspector {

}

message RuleForm {

}

message RuleSearchOrder {

}

message RuleSearch {

}

message RuleSearchResults {

}

message RuleList {
  repeated Rule rules = 1;
}

message Engine {
  dlkit.primordium.locale.primitives.DisplayText description = 1;
  dlkit.primordium.locale.primitives.DisplayText displayName = 2;
  dlkit.primordium.type.primitives.Type genusTypeId = 3;
  dlkit.primordium.id.primitives.Id id = 4;
  repeated dlkit.primordium.type.primitives.Type recordTypeIds = 5;
}

message EngineQuery {

}

message EngineQueryInspector {

}

message EngineForm {

}

message EngineSearchOrder {

}

message EngineSearch {

}

message EngineSearchResults {

}

message EngineList {
  repeated Engine engines = 1;
}

message EngineNode {

}

message EngineNodeList {
  repeated EngineNode engine_nodes = 1;
}

message Condition {

}

message Result {

}